store user online status in redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ jwt.secret=VGhpcyBpcyBhIHNlY3JldCBrZXkgZm9yIEpXVC4=
 # jwt.access.expiration=900000  
 jwt.access.expiration=60000  
 jwt.refresh.expiration=604800000 
+
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
+
+logging.level.org.springframework.data.redis=DEBUG
+logging.level.io.lettuce.core=DEBUG
+
+
