implement sync message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=chatapp
-
+server.port=8081
 spring.data.mongodb.uri=mongodb+srv://22520988:22520988@cluster0.zeztdiz.mongodb.net/ChatApp?retryWrites=true&w=majority&appName=Cluster0
 jwt.secret=VGhpcyBpcyBhIHNlY3JldCBrZXkgZm9yIEpXVC4=
 # jwt.access.expiration=900000  
-jwt.access.expiration=60000  
-jwt.refresh.expiration=604800000 
+jwt.access.expiration=60000
+jwt.refresh.expiration=604800000
