--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,15 @@ logging.level.org.springframework.data.redis=DEBUG
 logging.level.io.lettuce.core=DEBUG
 
 
+# Cấu hình Kafka
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092} # Sử dụng biến môi trường, nếu không có thì mặc định là kafka:9092
+spring.kafka.consumer.group-id=chat-group # Đặt group-id chung cho các consumer
+
+# Cấu hình Serializer/Deserializer (nếu Spring Boot không tự nhận diện đúng)
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=* # Cho phép deserialize tất cả các package
+
+
