--- a/nginx.conf
+++ b/nginx.conf
@@ -7,16 +7,14 @@ events {
 http {
     # Danh sách các server backend (các instance chat app)
     upstream backend_servers {
-        least_conn; # THÊM DÒNG NÀY ĐỂ CHUYỂN SANG LEAST CONNECTIONS
-        # ip_hash; # Dùng nếu muốn sticky session dựa trên IP, hữu ích nếu WebSocket không có backplane tốt
-                  # Với Kafka làm backplane và logic xử lý tại từng instance, có thể không quá cần thiết.
+        least_conn; # LEAST CONNECTIONS
         server chatapp1:8080; # Trỏ tới service chatapp1, port 8080 bên trong container
         server chatapp2:8080; # Trỏ tới service chatapp2, port 8080 bên trong container
     }
 
     server {
         listen 80;
-        server_name localhost; # Hoặc domain của bạn
+        server_name localhost; 
 
         # Cấu hình chung cho các request
         location / {
@@ -32,7 +30,7 @@ http {
             proxy_set_header Connection "upgrade";
 
             # Tăng thời gian timeout cho kết nối WebSocket
-            proxy_connect_timeout 7d; # Hoặc giá trị phù hợp
+            proxy_connect_timeout 7d; 
             proxy_send_timeout 7d;
             proxy_read_timeout 7d;
         }
